-----------------------------------------------------------------------
-----------------------------------------------------------------------
Release notes:
-----------------------------------------------------------------------
-----------------------------------------------------------------------

* Fixed bug with flags - added code so that flag.aspx doesn't cache.
* Added cloning feature

* excel export for reports

* call mary brinton, jeremy, 
* no single quotes in custom fields or values
* same with project dorpdowns
* better capture error in bug.aspx if query has sql err
* test for apostrophe's
* clone bug, new buttons there
* more ajax-ee?
* more explicit settings to turn on and off projects, organizations
* more tool tips
* # of days in status
* field level permissions
* deactivated users
* per project defaults
* escalation/reminder
* better bug grouping
* LDAP?
* bitnami

-----------------------------------------------------------------------
Version 2.6.9  12/14/2007
-----------------------------------------------------------------------

Bugs:

* Fixed bug in search "left outer join orgs on ct_id = bg_org"
should read "left outer join orgs on og_id = bg_org".

* Fixed javascript error with svn_log.aspx. Thanks to Walt Crosby for 
being persistent about reporting the bug and supplying the correct code.

* Added missing permission check to subscribe.aspx.

* Added isnull() to check for project custom fields in search.aspx,
in case you have nulls in those fields.

* Fixed some typos related to project custom dropdowns in search, for
dropdowns 2 and 3.  Also, improved performance of search with regards 
to project custom dropdowns.  The page no longer makes a trip to the 
server if you are NOT using project custom dropdowns.

* Fixed "Object not set to reference bug on this line in edit_bug.aspx
when a user with Reporter permission tries to update a bug with a 
custom field:

Line 1851: string val = Request[drcc["name"].ToString()].Replace("'","''"); 
