@@ -339,7 +339,7 @@
 		
 		-->
 
-		<add key="DefaultPermissionLevel" value="0"/>
+		<add key="DefaultPermissionLevel" value="2"/>
 
 
 		<!--
